<resources>
    <string name="app_name">PlanPerfect</string>
    <string name="login">Login</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="register">Register</string>
    <string name="name_label">Name *</string>
    <string name="error_name">Invalid name, Please re-enter.</string>
    <string name="dob_label">Date Of Birth *</string>
    <string name="error_dob">Please select date of birth</string>
    <string name="phone_number_label">Phone Number *</string>
    <string name="error_phone">Invalid phone number, Please re-enter.</string>
    <string name="email_label">Email Address *</string>
    <string name="error_email">Invalid email address, Please re-enter.</string>
    <string name="country_label">Country *</string>
    <string name="error_country">Please select date of birth.</string>
    <string name="error_password">Invalid password, Please re-enter. Password must be at least 8 characters long and include at least one uppercase letter, one lowercase letter, one special character, and one number.</string>
    <string name="confirm_password_label">Confirm Password *</string>
    <string name="error_confirm_password">Mismatch password, Please re-enter.</string>
    <string name="accept_terms">
        I accept the <a href="terms">Terms and Conditions</a> and <a href="privacy">Privacy Policy</a>
    </string>
    <string name="error_message_placeholder">Something went wrongs</string>
    <string name="terms_and_conditions_title">Term and Conditions</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="congratulations">
        Congratulations!
    </string>
    <string name="success_registration_message">
        You have successfully registered with PlanPerfect. You can now proceed to login and start planning your perfect itinerary.
    </string>
    <string name="success_verification_message">
        A verification code has been sent to your registered email.
    </string>
    <string name="back_button">Back</string>
    <string name="reset_password">Forgot Password</string>
    <string name="confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_now_label">Don’t have an account? <u>Sign Up now!</u></string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="google_map_api_key">AIzaSyA_0OUex5GS9XOMk5s4k8_1kuemeE9svL0</string>

    <string-array name="collaborator_roles">
        <item>owner</item>
        <item>editor</item>
        <item>viewer</item>
    </string-array>
</resources>