<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_primary_gradient"
    tools:context=".view.authentication.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/bg_white_with_radius"
        android:orientation="vertical">

        <!-- Register Text -->
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:text="@string/register"
            android:textAllCaps="true"
            android:textColor="@color/secondary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Input Fields and Buttons Container -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingHorizontal="24dp">

            <!-- Name Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@drawable/text_input_color_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Name Error Message -->
            <LinearLayout
                android:id="@+id/tvNameErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvNameError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Date of Birth Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dob_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@drawable/text_input_color_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextDOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:focusable="false"
                    android:inputType="date" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Date of Birth Error Message -->
            <LinearLayout
                android:id="@+id/tvDOBErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvDOBError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Phone Number Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone_number_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@drawable/text_input_color_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Phone Number Error Message -->
            <LinearLayout
                android:id="@+id/tvPhoneErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvPhoneError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Email Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/email_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@drawable/text_input_color_state">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Email Error Message -->
            <LinearLayout
                android:id="@+id/tvEmailErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvEmailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Country Dropdown -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/country_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <Spinner
                    android:id="@+id/spinnerCountry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- Country Error Message -->

            <!-- Password Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@drawable/text_input_color_state"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Password Error Message -->
            <LinearLayout
                android:id="@+id/tvPasswordErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Confirm Password Input -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confirm_password_label"
                android:textColor="@color/secondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                app:boxBackgroundMode="filled"
                app:boxStrokeColor="@drawable/text_input_color_state"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Confirm Password Error Message -->
            <LinearLayout
                android:id="@+id/tvConfirmPasswordErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvConfirmPasswordError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Terms and Conditions Checkbox -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- CheckBox for terms acceptance -->
                <CheckBox
                    android:id="@+id/checkboxTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <!-- TextView with clickable terms and privacy policy links -->
                <TextView
                    android:id="@+id/tvTermsAndPrivacy"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/accept_terms"
                    android:autoLink="web"
                    android:linksClickable="true"
                    android:gravity="center_vertical"
                    android:textColor="@color/gray_text_color"/>
            </LinearLayout>

            <!-- Checkbox error view -->

            <LinearLayout
                android:id="@+id/checkboxErrorView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/errorIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_error_icon"
                    app:tint="@color/error_color" />

                <!-- Error Message Text -->
                <TextView
                    android:id="@+id/tvCheckboxError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Something went wrongs"
                    android:textColor="@color/error_color"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Register Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_button_001"
                android:text="@string/register"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
